# novisTrade

./: .gitignore  README.md  dataCollector.py  docker-compose.yml  pyproject.toml  requirements.txt
novisTrade/DataLayer/data_collection_service/: Dockerfile  README.md  config.toml  docker-compose.yml
novisTrade/DataLayer/data_collection_service/src/: main.rs
novisTrade/DataLayer/data_stream_services/: docker-compose.dev.yml
novisTrade/StrategyLayer/management_layer/: .gitignore  run.sh
novisTrade/StrategyLayer/management_layer/app/: main.py  run.py
novisTrade/StrategyLayer/management_layer/src/: api.py  main.py  manager.py  models.py  (+1 more)
novisTrade/config/: config.yaml  settings.py
novisTrade/dataStream/: README.md  __init__.py  dataclient.py  dataserver.py
novisTrade/dataStream/client/: dataclient.py
novisTrade/dataStream/core/: ws_manager.py
novisTrade/dataStream/exchanges/: __init__.py  base_ws.py  binance_ws.py  exchange_factory.py  kraken_ws.py  ws_manager.py
novisTrade/dataStream/server/: dataserver.py
novisTrade/data_collection_service/: Cargo.toml  README.md  config.toml
novisTrade/data_collection_service/src/: main.rs
novisTrade/data_collection_service/src/configuration/: mod.rs  settings.rs
novisTrade/data_collection_service/src/services/: receiver.rs  storage.rs
novisTrade/data_collection_service/src/utils/: file_rotation.rs  mod.rs
novisTrade/data_stream_services/: README.md  docker-compose.yml  requirements.txt
novisTrade/data_stream_services/shared/: utils.py
scripts/: collect_tick_data.sh  get_data_from_binance.sh
(+36 files in other folders)
