[package]
name = "data_collection_service"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.43.0", features = ["full"] }
redis = { version = "0.28.2", features = ["tokio-comp"] }
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
dotenv = "0.15.0"
tracing = "0.1.41"
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] }
tracing-appender = "0.2.3"
chrono = "0.4.39"
config = "0.15.7"
anyhow = "1.0.95"
thiserror = "2.0.11"
tokio-stream = "0.1.17"
futures = "0.3.19"
metrics = "0.20"
metrics-exporter-prometheus = "0.16.1"
